--- a/sourse/pug/blocks/s-content/_s-content.pug
+++ b/sourse/pug/blocks/s-content/_s-content.pug
@@ -33,9 +33,29 @@ mixin s-content-2()
 					и обсуждения. Только вы лично можете сфокусировать его внимание.
 		+e.main
 			.container
-				img.res-i(src="img/article-2.jpg", alt="")
-	// end s-content
-
+				#disqus_thread
+				script.
+					/**
+					*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+					*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+					/*
+					var disqus_config = function () {
+					this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+					this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+					};
+					*/
+					(function() { // DON'T EDIT BELOW THIS LINE
+					var d = document,
+					s = d.createElement('script');
+					s.src = 'https://https-pashawol-github-io-0012dino-public.disqus.com/embed.js';
+					s.setAttribute('data-timestamp', +new Date());
+					(d.head || d.body).appendChild(s);
+					})();
+				noscript
+					| Please enable JavaScript to view the 
+					a(href='https://disqus.com/?ref_noscript') comments powered by Disqus.
+					// end s-content
+				<script id="dsq-count-scr" src="//https-pashawol-github-io-0012dino-public.disqus.com/count.js" async></script>
 mixin s-content()
 	// start s-content
 	+b.s-content.section#s-content&attributes(attributes)
