--- a/sourse/pug/blocks/s-servises/_s-servises.scss
+++ b/sourse/pug/blocks/s-servises/_s-servises.scss
@@ -14,6 +14,8 @@
 	}
 	&__item{
 		height: 100%;
+		position: relative;
+		overflow: hidden;
 		box-shadow: 5px 9px 29px rgba(0, 0, 0, 0.1);
 		@include mt;
 		&:hover{
