--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -50,7 +50,8 @@
 		max-width: 400px;
 
 	}
-
+	
+	
 	&__swiper-wrapper {
 		z-index: 20;
 		position: relative;
@@ -259,6 +260,10 @@
 		}
 	}
 
+	.gallery-thumbs{
+
+		max-width: 400px;
+	}
 	@include media-breakpoint-up(lg) {}
 
 	@include media-breakpoint-up(md) {}
