--- a/sourse/pug/blocks/s-about/_s-about.pug
+++ b/sourse/pug/blocks/s-about/_s-about.pug
@@ -3,7 +3,7 @@ mixin s-about()
 	+b.SECTION.s-about.section&attributes(attributes)
 		.container
 			.row
-				.col-xxl-9.col-xl-8.col-lg-7: +e.text-block
+				.col-xl-8.col-lg-7: +e.text-block
 					+b.section-title
 						h2 Дизайн-Студия Dino
 					p Студия создана в&nbsp;2015&nbsp;году. Специализируемся на&nbsp;разработке и&nbsp;поддержке сайтов.
