--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -111,7 +111,8 @@ block pagecontent
 				span Rus°
 			a.crls__call.callOpen
 				span.btt-call
-					i.icn.icn-hand
+					span
+						+icon('hand')
 				span.txt связаться
 		.crls-cl.crls-bl.wow.fadeIn.hidden(data-wow-delay='.22s')
 			ul.crls_pgs
