--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -57,6 +57,10 @@
 	font-size:(36/10)*1rem;
 	width:(33/36)*1em;
 }
+.icon-hand_—_копия {
+	font-size:(36/10)*1rem;
+	width:(33/36)*1em;
+}
 .icon-instagram {
 	font-size:(22/10)*1rem;
 	width:(22/22)*1em;
