--- a/sourse/pug/blocks/s-about/_s-about.scss
+++ b/sourse/pug/blocks/s-about/_s-about.scss
@@ -1,4 +1,7 @@
 .s-about {
+		.fp-tableCell{
+			vertical-align: bottom;
+		}
 		.container{
 			@include media-breakpoint-up(xxl) {
 
@@ -10,7 +13,9 @@
 
 				padding-top: 80px;
 				padding-bottom: 80px;
+			
 			}
+
 			padding-top: 100px;
 			}
 		 p{
@@ -29,7 +34,20 @@
 			 }
 		 }
 		 &__img-wrap{
-
+				border-radius: 50%;
+				position: relative;
+				overflow: hidden;
+				width: 140px;
+				height: 140px;
+				@include media-breakpoint-up(md) {
+				margin-left: 0;
+				margin-right: 0;
+				}
+				margin-left: auto;
+				margin-right: auto;
+				img{
+					max-width: 100%;
+				}
 			
 		 }
 		 &__row-foot{
@@ -68,7 +86,7 @@
 		 &__text-block{
 			 padding-bottom: 30px;
 			 @include media-breakpoint-up(xxl) {
-				 padding-bottom: 80px;
+				 padding-bottom: 60px;
 			 }
 		 }
 		 &__btn{
