--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -1,4 +1,5 @@
-
+@include font-face ("roboto", "../fonts/Roboto-Regular/Roboto-Regular", $file-formats: woff2 woff ttf);
+@include font-face ("roboto", "../fonts/Roboto-Bold/Roboto-Bold", bold, $file-formats: woff2 woff ttf);
 
 @include font-face ("Century Gothic", "../fonts/CenturyGothic/CenturyGothic", $file-formats: woff2 woff ttf);
 @include font-face ("Century Gothic", "../fonts/CenturyGothic-Bold/CenturyGothic-Bold", 700, $file-formats: woff2 woff ttf);
