--- a/sourse/pug/blocks/s-about/_s-about.pug
+++ b/sourse/pug/blocks/s-about/_s-about.pug
@@ -1,6 +1,6 @@
 mixin s-about()
 	// start s-about
-	+b.SECTION.s-about.section&attributes(attributes)
+	+b.s-about.section&attributes(attributes)
 		.container
 			.row
 				.col-xl-8.col-lg-7: +e.text-block
