--- a/sourse/pug/pages/02-servise.pug
+++ b/sourse/pug/pages/02-servise.pug
@@ -16,7 +16,7 @@ block pagecontent
 	main
 		+top-nav()
 		+s-content()
-		+s-servises(class="s-servises--page")
+		+s-servises2(class="s-servises--page")
 		+s-form(class="")
 			+b.footer--page.text-center.text-white
 				+e.btn(href="#") Все услуги
