--- a/sourse/sass/bootstrap-theme/_variables.scss
+++ b/sourse/sass/bootstrap-theme/_variables.scss
@@ -486,10 +486,10 @@ $input-border-radius-lg:                $border-radius-lg !default;
 $input-border-radius-sm:                $border-radius-sm !default;
 
 $input-focus-bg:                        $input-bg !default;
-$input-focus-border-color:              lighten($component-active-bg, 25%) !default;
+$input-focus-border-color:              rgba($white, .4) !default;
 $input-focus-color:                     $input-color !default;
 $input-focus-width:                     $input-btn-focus-width !default;
-$input-focus-box-shadow:                $input-btn-focus-box-shadow !default;
+$input-focus-box-shadow:                none !default;
 
 $input-placeholder-color:               #fff !default;
 $input-plaintext-color:                 $body-color !default;
