--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -50,16 +50,38 @@
 		max-width: 400px;
 
 	}
-	
-	
+	.gallery-thumbs{
+		overflow: inherit;
+	}
+	&__slide-sm{
+		position: relative;
+		padding-bottom: 20px;
+		&::before{
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -3px;
+			height: 4px;
+			border-radius: 2px;
+			background-color: #ff7e07; 
+			width: 100%;
+			opacity: 0;
+		}
+	}
+	.swiper-slide-thumb-active{
+		&::before{
+			opacity: 1;
+		}
+	}
 	&__swiper-wrapper {
 		z-index: 20;
 		position: relative;
-		border-bottom: 1px solid #000;
+		border-bottom: 2px solid #e5e5e5;
+		max-width: 450px;
 
 		@include media-breakpoint-down(md) {
 
-			max-width: 405px;
+			max-width: 360px;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -82,8 +104,8 @@
 		background-color: $primary;
 		@include media-breakpoint-up(xl) {
 			
-			padding: em(15) em(15);
-			border-radius: 30px 0;
+			padding: em(8) em(25);
+			border-radius: 20px 0;
 		}
 		@include media-breakpoint-up(lg) {
 			// margin-left: 0;
@@ -128,7 +150,7 @@
 		}
 
 		@include media-breakpoint-up(xl) {
-			padding-top: 120px;
+			padding-top: 180px;
 			// padding-bottom: rem(20px);
 		}
 
@@ -193,10 +215,11 @@
 
 				display: flex;
 				flex-direction: column;
-				justify-content: center;
+				justify-content: flex-end;
+				// justify-content: center;
 			}
 			@include media-breakpoint-up(xl) {
-				justify-content: space-between;
+				// justify-content: space-between;
 
 				padding-top: rem(40px);
 			}
@@ -241,6 +264,7 @@
 	}
 
 	.swiper-wrapper {
+		align-items: flex-end;
 		@include media-breakpoint-up(xxl) {
 
 			align-items: flex-end;
@@ -251,6 +275,7 @@
 		height: 2px;
 		background-color: #e5e5e5;
 		margin-top: 10px;
+
 		&-drag{
 			height: 4px;
 			border-radius: 2px;
@@ -264,6 +289,9 @@
 	.gallery-thumbs{
 
 		max-width: 400px;
+		.swiper-wrapper{
+			transform: translate3d(0px, 0px, 0px) !important;
+		}
 	}
 	@include media-breakpoint-up(lg) {}
 
