--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -1,6 +1,6 @@
 mixin s-portfolio()
 	// / .Works
-	section.section.scrollable&attributes(attributes)
+	section.wrks-wrap.section.scrollable&attributes(attributes)
 		+b.wrks
 			.d-lg-none.text-center
 				h2 Наши работы
