--- a/sourse/pug/blocks/s-about/_s-about.scss
+++ b/sourse/pug/blocks/s-about/_s-about.scss
@@ -142,6 +142,9 @@
 			}
 		}
 	}
+	@include media-breakpoint-down(xs) {
+		padding-bottom: 100px;
+	} 
 	@include media-breakpoint-down(xs) {} 
 
 }
