--- a/sourse/pug/blocks/s-logos/_s-logos.scss
+++ b/sourse/pug/blocks/s-logos/_s-logos.scss
@@ -81,6 +81,8 @@
 		padding-top: 100px;
 	}
 	@include media-breakpoint-down(sm) {}
-	@include media-breakpoint-down(xs) {} 
+	@include media-breakpoint-down(xs) {
+		padding-bottom: 50px;
+	} 
 
 }
