--- a/sourse/sass/main-2.scss
+++ b/sourse/sass/main-2.scss
@@ -5311,7 +5311,7 @@
  .btt-blue {
    height: rem(61);
    font-size: rem(15);
-   box-shadow: 4px 7px 22px rgba(0, 0, 0, 0.35);
+  //  box-shadow: 4px 7px 22px rgba(0, 0, 0, 0.35);
    background-color: #499ae9;
  }
 
@@ -6476,17 +6476,18 @@ $color-text:  #282828;
    padding: em(22px) em(13px) 0 em(13px);
   //  font-size: 12px;
     font-weight: bold;
-    @extend .h6;
+    // @extend .h6;
+    font-size: .8125rem;
    text-transform: none;
    display: inline-block;
  }
 
- .crls__langs>span {
+ .crls__langs>a {
    display: inline-block;
    color: #a5a5a5;
  }
 
- .crls__langs a {
+ .crls__langs span {
    display: inline-block;
    margin: 0 em(15px);
    &.text-white{
@@ -6754,6 +6755,18 @@ $color-text:  #282828;
    opacity: 1;
    -webkit-box-shadow: -2px 0 12px rgba(0, 0, 0, 0.35);
    box-shadow: -2px 0 12px rgba(0, 0, 0, 0.35);
+   .call__bg{
+     position: absolute;
+    //  z-index: ;
+     width: 100vw;
+     height: 100%;
+     right: 0;
+     top: 0;
+   }
+   .call__inner{
+     position: relative;
+     z-index: 200;
+   }
  }
  body.call-opened2 #calProject {
    right: 0;
@@ -6764,8 +6777,12 @@ $color-text:  #282828;
 
  body.page-next .crls__call span.txt,
  body.page-scrolled .crls__call span.txt,
+  body.menu-opened .crls__langs .text-white,
+  body.menu-opened.last-screen:not(.page-next) .crls__langs .text-white,
+  body.menu-opened.last-screen:not(.page-next) .crls_menu ,
+  body.menu-opened.last-screen:not(.page-next) .crls__call span.txt ,
  body.menu-opened .crls__call span.txt {
-   color: #3b3b3b;
+   color: #3b3b3b !important;
  }
 
  body.page-scrolled .crls__call span.txt:before,
@@ -6773,10 +6790,13 @@ $color-text:  #282828;
    background-color: #3b3b3b;
  }
 
- body.page-next .crls_scls a,
+ body.page-next .crls_scls a{
+  -webkit-filter: invert(0.9) ;
+  filter: invert(0.9) ;
+} 
  body.menu-opened .crls_scls a {
-   -webkit-filter: invert(0.9);
-   filter: invert(0.9);
+   -webkit-filter: invert(0.9) !important;
+   filter: invert(0.9) !important;
  }
 
  body.page-scrolled .crls__langs a,
