add projects and arrow top

--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -5,6 +5,10 @@
 	fill: currentColor;
 }
 
+.icon--arrow-top {
+	font-size:(27/10)*1rem;
+	width:(26.97/27)*1em;
+}
 .icon-about-i-1 {
 	font-size:(65/10)*1rem;
 	width:(51/65)*1em;
@@ -24,6 +28,10 @@
 .icon-arrow-double {
 	font-size:(11/10)*1rem;
 	width:(10/11)*1em;
+}
+.icon-arrow-top {
+	font-size:(36/10)*1rem;
+	width:(36/36)*1em;
 }
 .icon-behance {
 	font-size:(16/10)*1rem;
