--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -55,8 +55,10 @@ mixin top-nav()
 						span.txt меню
 				.col-md-auto.col-8.text-center
 					+e.logo.logo.crls__logo(href='#')
-						i.logo_main.wow.fadeInLeft
-						i.logo_name.wow.fadeInRight
+						.logo_main.wow.fadeInLeft
+							img.res-i(src="img/logo-name.svg", alt="")
+						.logo_name.wow.fadeInRight
+							img.res-i(src="img/logo.svg", alt="")
 				
 				.col.d-none.d-md-block
 					+mnu()
