--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -97,9 +97,11 @@ block pagecontent
 					+icon("whatsapp")
 		.crls-cl.crls-tl
 			.after
-			a.logo.crls__logo(href='#')
-				i.logo_main.wow.fadeInLeft
-				i.logo_name.wow.fadeInRight
+				+e.logo.logo.crls__logo(href='#')
+					.logo_main.wow.fadeInLeft
+						img.res-i(src="img/logo.svg", alt="")
+					.logo_name.wow.fadeInRight
+						img.res-i(src="img/logo-name.svg", alt="")
 			a#menuOpen.crls_menu
 				span.btt-menu
 					i
@@ -112,9 +114,16 @@ block pagecontent
 				a(href='#') Rus
 			a.crls__call.callDown(href="#s-form")
 				span.btt-call
-					span
+					span.animate
 						+icon('hand2')
 				span.txt связаться
+			
+			a.crls__call.callTop.d-none(href="#mainHead")
+				span.btt-call
+					span
+						+icon('arrow-top')
+				span.txt вверх
+
 		.crls-cl.crls-bl.wow.fadeIn.hidden(data-wow-delay='.22s')
 			ul.crls_pgs
 				li.active
