add projects and arrow top

--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -32,8 +32,8 @@ mixin s-portfolio()
 				#tab1.wrks__tbs-itm
 					.arn-msnr
 						//- .cl-sizer.cl-1
-						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-1.jpg)" data-img="img/project-1.jpg").full-modal-open-js
-							img(src="img/project-1.jpg")
+						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-1-sm.jpg)" data-img="img/project-1.jpg").full-modal-open-js
+							img(src="img/project-1-sm.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
@@ -41,8 +41,8 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm.img-bg(href="#" style="background-image: url(img/project-2.jpg)" data-img="img/project-2.jpg").full-modal-open-js
-							img(src="img/project-2.jpg")
+						+b.cl.cl-5.itm.img-bg(href="#" style="background-image: url(img/project-2-sm.jpg)" data-img="img/project-2.jpg").full-modal-open-js
+							img(src="img/project-2-sm.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title  Продающий сайт   для  
@@ -55,8 +55,8 @@ mixin s-portfolio()
 									span Нажмите для просмотра проекта
 						.cl-7
 							.arn-msnr
-								+b.cl.cl-7.itm.ht6.img-bg(href="#" style="background-image: url(img/project-3.jpg)" data-img="img/project-3.jpg").full-modal-open-js
-									img(src="img/project-3.jpg")
+								+b.cl.cl-7.itm.ht6.img-bg(href="#" style="background-image: url(img/project-3-sm.jpg)" data-img="img/project-3.jpg").full-modal-open-js
+									img(src="img/project-3-sm.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -66,8 +66,8 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht6.img-bg(href="#" style="background-image: url(img/project-4.jpg)" data-img="img/project-4.jpg").full-modal-open-js
-									img(src="img/project-4.jpg")
+								+b.cl.cl-5.itm.ht6.img-bg(href="#" style="background-image: url(img/project-4-sm.jpg)" data-img="img/project-4.jpg").full-modal-open-js
+									img(src="img/project-4-sm.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title Листовка   для 
@@ -79,8 +79,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						 
-								+b.cl.cl-7.itm.ht5.img-bg(href="#" style="background-image: url(img/project-5.jpg)" data-img="img/project-5.jpg").full-modal-open-js
-									img(src="img/project-5.jpg")
+								+b.cl.cl-7.itm.ht5.img-bg(href="#" style="background-image: url(img/project-5-sm.jpg)" data-img="img/project-5.jpg").full-modal-open-js
+									img(src="img/project-5-sm.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Продающий сайт   для  
@@ -91,8 +91,8 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht5.img-bg(href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-6.jpg").full-modal-open-js
-									img(src="img/project-7.jpg")
+								+b.cl.cl-5.itm.ht5.img-bg(href="#" style="background-image: url(img/project-6-sm.jpg)" data-img="img/project-6.jpg").full-modal-open-js
+									img(src="img/project-6-sm.jpg")
 									.itm__more
 										.ttl-bord
 											+e.DIV.title  Листовка   для 
@@ -102,8 +102,8 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
-							+b.cl.cl-12.itm.ht4.img-bg(href="#" style="background-image: url(img/project-7.jpg)" data-img="img/project-7.jpg").full-modal-open-js
-								img(src="img/project-7.jpg")
+							+b.cl.cl-12.itm.ht4.img-bg(href="#" style="background-image: url(img/project--sm7.jpg)" data-img="img/project-7.jpg").full-modal-open-js
+								img(src="img/project-7-sm.jpg")
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -112,8 +112,8 @@ mixin s-portfolio()
 											|  для компании  Geroy
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-							+b.cl.cl-12.itm.img-bg(href="#" style="background-image: url(img/project-8.jpg)" data-img="img/project-8.jpg").full-modal-open-js
-								img(src="img/project-8.jpg")
+							+b.cl.cl-12.itm.img-bg(href="#" style="background-image: url(img/project-8-sm.jpg)" data-img="img/project-8.jpg").full-modal-open-js
+								img(src="img/project-8-sm.jpg")
 								.itm__more
 									.ttl-bord
 										+e.DIV.title  Продающий сайт   для 
@@ -122,8 +122,8 @@ mixin s-portfolio()
 											| “Лабиринт”
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-9.jpg)" data-img="img/project-9.jpg").full-modal-open-js
-							img(src="img/project-9.jpg")
+						+b.cl.cl-7.itm.img-bg(href="#" style="background-image: url(img/project-9-sm.jpg)" data-img="img/project-9.jpg").full-modal-open-js
+							img(src="img/project-9-sm.jpg")
 							.itm__more
 								.ttl-bord
 									+e.DIV.title Билборд  для лечебного  центра компания&nbsp;&mdash;  
