add projects and arrow top

--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -102,7 +102,7 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
-							+b.cl.cl-12.itm.ht4.img-bg(href="#" style="background-image: url(img/project--sm7.jpg)" data-img="img/project-7.jpg").full-modal-open-js
+							+b.cl.cl-12.itm.ht4.img-bg(href="#" style="background-image: url(img/project-7-sm.jpg)" data-img="img/project-7.jpg").full-modal-open-js
 								img(src="img/project-7-sm.jpg")
 								.itm__more
 									.ttl-bord
