--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -5,68 +5,60 @@ mixin s-team()
 			.section-title.text-center
 				h2 Наша команда
 				p.text-secondary Наши команда&nbsp;&mdash; это те&nbsp;люди, которые каждый день решают задачи. Мы&nbsp;прошли вместе больше чем 500&nbsp;проектов. Наш сплоченны коллектив поможет реолизовать задачи в&nbsp;кратчайшие сроки с&nbsp;максимальным результатом.
-			div
+			.tabs 
 				.row
 					.col
-					.col-xl-7.col-lg-8
-						+e.swiper-wrapper
-							.swiper-container.gallery-thumbs
-								.swiper-wrapper
-									- for (var x = 1; x < 6; x++)
-										+e.slide-sm.swiper-slide
-											+e.img-wrap-sm
-												img(src=`img/team-${x}.png`, alt='') 
+					.col-xl-7.col-md-8
+							.tabs__caption
+								mixin it(x)
+									+e.slide-sm.tabs__btn&attributes(attributes)
+										+e.img-wrap-sm
+											img(src=`img/team-${x}.png`, alt='') 
+								+it('1')(class="active")
+								+it('2')
+								+it('3')
+								+it('4')
+								+it('5')
+				+e.wrap 
+					 
+					mixin item(i,t,t1)
+						+e.slide.tabs__content&attributes(attributes)
+							+e.item
+								.row
+									.col-xl-5.col-md-4.align-self-end
+										+e.img-wrap
+											+e.title.d-md-none.text-center= t
+											img.res-i(src=`img/team-${i}.png`, alt='')
+									.col
+										+e.caption
+											+e.text
+												.text-right
+													+e.proff= t1
+												+e.title.d-none.d-md-block= t
+												block
+											+e.btn.btt.btt-md.btn-block.btt-blue(type="button")
+												span О нас
+						// / +e.slide.swiper-slide
+					+item("1","Дмитрий Новиков","Генеральный директор")(class="active")
+						p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
+							br
+							| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
+					+item("2","Денис Миловидов","Арт-директор")
+						p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
+							br
+							| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
+					+item("3","Алиса Новикова","Проект менеджер")
+						p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
+							br
+							| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
+					+item("4","Дмитрий Пощикайло","SMM менеджер")
+						p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
+							br
+							| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
+					+item("5","Андрей Бударинцев","SEO менеджер")
+						p Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.
 
-									//- - for (var x = 1; x < 6; x++)
-									//- 	+e.slide-sm.swiper-slide
-									//- 		+e.img-wrap-sm
-									//- 			img(src="#" data-src=`img/team-${x}.png`, alt='')
-										
-										//- +e.slide-sm.swiper-slide
-										//- 	+e.img-wrap-sm
-										//- 		img(src="#" data-src=`img/team-${x}.png`, alt='')
-										
-							//- .swiper-scrollbar
-				.swiper-container.gallery-top
-					.swiper-wrapper
-						mixin item(i,t,t1)
-							+e.slide.swiper-slide
-								+e.item
-									.row
-										.col-xl-5.col-lg-4.align-self-end
-											+e.img-wrap
-												+e.title.d-lg-none.text-center= t
-												img.res-i(src="#" data-src=`img/team-${i}.png`, alt='')
-										.col
-											+e.caption
-												+e.text
-													.text-right
-														+e.proff= t1
-													+e.title.d-none.d-lg-block= t
-													block
-												+e.btn.btt.btt-lg.btn-block.btt-blue(type="button")
-													span О нас
-							// / +e.slide.swiper-slide
-						+item("1","Дмитрий Новиков","Генеральный директор")
-							p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
-								br
-								| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
-						+item("2","Денис Миловидов","Арт-директор")
-							p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
-								br
-								| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
-						+item("3","Алиса Новикова","Проект менеджер")
-							p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
-								br
-								| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
-						+item("4","Дмитрий Пощикайло","SMM менеджер")
-							p Наши команда - это те люди, которые каждый день решают задачи. Мы прошли вместе больше чем 500 проектов.
-								br
-								| Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
-						+item("5","Андрей Бударинцев","SEO менеджер")
-							p Наши команда - это те люди, которые каждый день решают задачи.  Мы прошли вместе больше чем 500 проектов.
-
-							p Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
-							
+						p Наш сплоченны коллектив поможет реолизовать задачи в кратчайшие сроки с максимальным результатом.
+								
 			
 	// .Team /
