--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -8,7 +8,7 @@
 
 	&__slide {
 		&:not(.swiper-slide-active) {
-			opacity: 0 !important;
+			// opacity: 0 !important;
 		}
 	}
 
@@ -16,7 +16,7 @@
 		// width: 55px;
 		width: auto;
 
-		&:not(.swiper-slide-thumb-active) {
+		&:not(.active) {
 			opacity: 0.4;
 		}
 	}
@@ -43,7 +43,7 @@
 
 	}
 
-	.gallery-thumbs {
+	.tabs__caption {
 		// margin-left: auto;
 		// margin-right: 0;
 		margin-left: 0;
@@ -68,18 +68,18 @@
 			opacity: 0;
 		}
 	}
-	.swiper-slide-thumb-active{
+	&__slide-sm.active{
 		&::before{
 			opacity: 1;
 		}
 	}
-	&__swiper-wrapper {
+	.tabs__caption {
 		z-index: 20;
 		position: relative;
 		border-bottom: 2px solid #e5e5e5;
 		max-width: 450px;
 
-		@include media-breakpoint-down(md) {
+		@include media-breakpoint-down(sm) {
 
 			max-width: 360px;
 			margin-left: auto;
@@ -107,7 +107,7 @@
 			padding: em(8) em(25);
 			border-radius: 20px 0;
 		}
-		@include media-breakpoint-up(lg) {
+		@include media-breakpoint-up(md) {
 			// margin-left: 0;
 			margin-right: 0;
 							}
@@ -129,7 +129,7 @@
 		@include media-breakpoint-up(xxl) {}
 
 		// margin-top: -200px;
-		@include media-breakpoint-up(xl) {
+		@include media-breakpoint-up(lg) {
 
 			margin-top: -130px;
 		}
@@ -140,23 +140,33 @@
 	&__caption {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
 		height: 100%;
-
+		
 		@include media-breakpoint-up(xxl) {
-
+			
 			padding-top: 160px;
 			padding-bottom: 100px;
 		}
-
+		
 		@include media-breakpoint-up(xl) {
+			justify-content: space-between;
 			padding-top: 180px;
 			// padding-bottom: rem(20px);
 		}
+		
+		@include media-breakpoint-up(lg) {
+			padding-top: 80px;
+			// padding-bottom: rem(20px);
+		}
+		@include media-breakpoint-up(md) {
+			padding-top: 20px;
+			// padding-bottom: rem(20px);
+		}
+
 
 		padding-bottom: rem(35px);
 
-		@include media-breakpoint-down(md) {
+		@include media-breakpoint-down(sm) {
 
 			max-width: 405px;
 			margin-left: auto;
@@ -165,7 +175,7 @@
 		}
 	}
 
-	@include media-breakpoint-up(lg) {
+	@include media-breakpoint-up(md) {
 
 		// padding-bottom: rem(25px);
 
@@ -201,6 +211,10 @@
 		max-width: rem(324px);
 
 		@include media-breakpoint-down(md) {
+
+			display: none;
+		}
+		@include media-breakpoint-down(sm) {
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -211,14 +225,14 @@
 
 			min-height: 100vh;
 
-			@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(md) {
 
 				display: flex;
 				flex-direction: column;
 				justify-content: flex-end;
 				// justify-content: center;
 			}
-			@include media-breakpoint-up(xl) {
+			@include media-breakpoint-up(lg) {
 				// justify-content: space-between;
 
 				padding-top: rem(40px);
@@ -231,7 +245,7 @@
 	&__img-wrap {
 		@include media-breakpoint-up(xxl) {}
 
-		@include media-breakpoint-up(xl) {
+		@include media-breakpoint-up(md) {
 			text-align: left;
 			margin-right: -54px;
 			margin-top: 0;
@@ -247,7 +261,7 @@
 				max-height: 620px;
 			}
 
-			@include media-breakpoint-up(xl) {
+			@include media-breakpoint-up(lg) {
 
 				max-height: 500px;
 			}
@@ -321,12 +335,14 @@
 
 	@include media-breakpoint-down(lg) {}
 
-	@include media-breakpoint-down(md) {}
+	@include media-breakpoint-down(sm) {}
 
 	@include media-breakpoint-down(sm) {}
 
 	@include media-breakpoint-down(xs) {
 	
 	}
-
+	.tabs__caption{
+		display: flex;
+	}
 }
