--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -7,6 +7,10 @@ html {
 	background-position: center top;
 	background-repeat: no-repeat;
 
+	@include media-breakpoint-down(md) {
+		// height: auto !important;
+		overflow-y: inherit !important;
+	}
 	// @include media-breakpoint-up(sm) {
 
 	// 	margin-left: calc(100vw - 100%);
