--- a/sourse/pug/blocks/s-about/_s-about.scss
+++ b/sourse/pug/blocks/s-about/_s-about.scss
@@ -17,8 +17,8 @@
 			}
 			@include media-breakpoint-up(lg) {
 
-				padding-top: 80px;
-				padding-bottom: 80px;
+				padding-top: rem(50px);
+				padding-bottom: rem(50px);
 			
 			}
 
@@ -43,8 +43,8 @@
 				border-radius: 50%;
 				position: relative;
 				overflow: hidden;
-				width: 140px;
-				height: 140px;
+				width: rem(140px);
+				height: rem(140px);
 				@include media-breakpoint-up(md) {
 				margin-left: 0;
 				margin-right: 0;
@@ -67,14 +67,14 @@
 			 @extend .h6;
 			 font-weight: bold;
 			 text-align: center;
-			 max-width: 260px;
-			 width: 260px;
+			 max-width: rem(260px);
+			 width: rem(260px);
 			 text-transform: uppercase;
 			 @include media-breakpoint-up(xxl) {
 
-				 padding-bottom: 60px;
+				 padding-bottom: rem(60px);
 				}
-				padding-bottom: 30px;
+				padding-bottom: rem(30px);
 
 		 }
 		 &__icon-wrap{
@@ -90,15 +90,15 @@
 			}
 		 }
 		 &__text-block{
-			 padding-bottom: 30px;
+			 padding-bottom: rem(10);
 			 @include media-breakpoint-up(xxl) {
-				 padding-bottom: 60px;
+				 padding-bottom: rem(60px);
 			 }
 		 }
 		 &__btn{
 			 margin-left: auto;
 			 margin-right: auto;
-			 max-width: 324px;
+			 max-width: rem(324px);
 			 width: 100%;
 			 display: flex;
 			 @include media-breakpoint-down(md) {
