--- a/sourse/pug/blocks/s-servises/_s-servises.scss
+++ b/sourse/pug/blocks/s-servises/_s-servises.scss
@@ -85,7 +85,7 @@
 			max-width: 95%;
 			// max-height: none;
 			img{
-				max-height: 100%;
+				max-height: rem(275);
 				// max-height: 100%;
 			}
 		}
