--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -110,8 +110,8 @@ block pagecontent
 				span.txt меню
 		.crls-cl.crls-tr.wow.fadeIn(data-wow-delay='.22s')
 			+b.crls__langs
-				+e.SPAN.current.text-white Eng
-				a(href='#') Rus
+				a(href='#') Eng
+				+e.SPAN.current.text-white Rus
 			a.crls__call.callDown(href="#s-form")
 				span.btt-call
 					span.animate
